Fixed download issue

--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
             class="rounded-sm bg-vibrant px-4 py-2 text-lg duration-500 hover:bg-accent"
           >
             <a
-              href="https://rakshakarn.netlify.app/files/Raksha-Karn-Official.pdf"
-              download
+              href="/files/Raksha-Karn-Official.pdf"
+              download="Raksha-Karn-Resume.pdf"
               >Download CV</a
             >
           </button>
