--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
             class="rounded-sm bg-vibrant px-4 py-2 text-lg duration-500 hover:bg-accent"
           >
             <a
-              href="/files/Raksha-Karn-Resume.pdf"
-              download="Raksha-Karn-Resume.pdf"
+              href="/files/Raksha-Resume.pdf"
+              download="Raksha-Resume.pdf"
               >Download CV</a
             >
           </button>
